--- a/views/new.pug
+++ b/views/new.pug
@@ -2,6 +2,7 @@ extends layout
 
 block content 
   form(method="post", action="/schedules").my-3
+    input(type="hidden" name="_csrf" value!=csrfToken)
     div.form-group
       label(for="scheduleName") Schedule Name
       input(type="text" name="scheduleName")#scheduleName.form-control
